agregando carpetas y archivos base

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -13,9 +13,7 @@
 <body>
     <div id="app">
         <!-- ======= Header ======= -->
-        <header>
-            <img src="./media/logo-royaloak.png" alt="Logo" width="100">
-        </header>
+        <header></header>
         <!-- ======= navBar ======= -->
         <nav></nav>
         <!-- ======= Main ======= -->
