--- a/src/main/resources/static/web/login.html
+++ b/src/main/resources/static/web/login.html
@@ -8,16 +8,17 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/register.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>login</title>
 </head>
-<body class="bounce-top">
+<body  >
     <div id="app">
         
         <a href="index.html" class="logo" target="_blank">
             <img id="logo" src="media/logo-royaloak.png" alt="">
         </a>
     
-        <div class="section">
+        <div data-aos="fade-" class="section">
             <div class="container">
                 <div class="row full-height justify-content-center">
                     <div class="col-12 text-center align-self-center py-5">
@@ -40,7 +41,10 @@
                                                     <input type="password" name="logpass" class="form-style" placeholder="Contraseña" id="logpass" autocomplete="off" required>
                                                     <i class="input-icon uil uil-lock-alt"></i>
                                                 </div>
-                                                <a href="#" class="btn mt-4">ingresar</a>
+                                                <div class="d-flex">
+                                                    <a href="#" class="btn mt-4">ingresar</a>
+                                                    <a href="#" class="btn mt-4">ingresar como invitado</a>
+                                                </div>
                                                 <p class="mb-0.5 mt-4 text-center"><a href="#0" class="link">Olvidaste tu contraseña?</a></p>
                                               </div>
                                           </div>
@@ -96,5 +100,7 @@
     <script src="https://unpkg.com/vue@3"></script>
     <!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="sweetalert2.min.js"></script> -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init({duration: 1200,})</script>
 </body>
 </html>
