--- a/src/main/resources/static/web/pages/contacto.html
+++ b/src/main/resources/static/web/pages/contacto.html
@@ -17,9 +17,13 @@
         <!-- ======= navBar ======= -->
         <nav></nav>
         <!-- ======= Main ======= -->
-        <main></main>
+        <main>
+
+        </main>
         <!-- ======= Footer ======= -->
-        <footer></footer>
+        <footer>
+            
+        </footer>
     </div>
 
     <!-- Script de Bootstrap -->
