--- a/src/main/resources/static/web/login.html
+++ b/src/main/resources/static/web/login.html
@@ -11,14 +11,14 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>login</title>
 </head>
-<body  >
+<body >
     <div id="app">
         
-        <a href="index.html" class="logo" target="_blank">
+        <a href="index.html" class="logo puff-in-center" target="_blank">
             <img id="logo" src="media/logo-royaloak.png" alt="">
         </a>
     
-        <div data-aos="fade-" class="section">
+        <div data-aos="fade-" class="section ">
             <div class="container">
                 <div class="row full-height justify-content-center">
                     <div class="col-12 text-center align-self-center py-5">
@@ -41,9 +41,8 @@
                                                     <input type="password" name="logpass" class="form-style" placeholder="Contraseña" id="logpass" autocomplete="off" required>
                                                     <i class="input-icon uil uil-lock-alt"></i>
                                                 </div>
-                                                <div class="d-flex">
+                                                <div>
                                                     <a href="#" class="btn mt-4">ingresar</a>
-                                                    <a href="#" class="btn mt-4">ingresar como invitado</a>
                                                 </div>
                                                 <p class="mb-0.5 mt-4 text-center"><a href="#0" class="link">Olvidaste tu contraseña?</a></p>
                                               </div>
@@ -73,7 +72,7 @@
                                                     <input type="number" name="logpass" class="form-style" placeholder="Telefono" id="logpass" autocomplete="off" required>
                                                     <i class="input-icon uil uil-lock-alt"></i>
                                                 </div>
-                                                <a href="#" class="btn mt-3">REGISTRARME</a>
+                                                <a href="#" class="btn mt-3">Registrarme</a>
                                               </div>
                                           </div>
                                       </div>
