cambios css carrito

--- a/src/main/resources/static/web/pages/carrito.html
+++ b/src/main/resources/static/web/pages/carrito.html
@@ -36,8 +36,8 @@
                   <ul class="tableHead">
                     <li class="prodHeader">Producto</li>
                     <li class="cantidadCarrito">Cantidad</li>
-                    <li>Total</li>
-                    <li>Quitar</li>
+                    <li class="totalCarrito">Total</li>
+                    <li class="quitarCarrito">Quitar</li>
                   </ul>
                   <ul class="cartWrap">
                     <li class="items even" data-aos="fade-up">
