--- a/src/main/resources/static/web/pages/contacto.html
+++ b/src/main/resources/static/web/pages/contacto.html
@@ -19,7 +19,9 @@
         <!-- ======= Main ======= -->
         <main></main>
         <!-- ======= Footer ======= -->
-        <footer></footer>
+        <footer>
+            <p>blab alb alb alb alb al</p>
+        </footer>
     </div>
 
     <!-- Script de Bootstrap -->
