--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -816,8 +816,8 @@
 
         </div>
 
-        <!-- FOOTER -->
-        <div id="contenedorInfo">
+        <!-- FOOTER NACHO -->
+        <!-- <div id="contenedorInfo">
                 <button class="botoninfo" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
                         aria-expanded="false" aria-controls="collapseExample">
                         <i class="bi bi-chevron-up"></i> Más información
@@ -892,8 +892,73 @@
                 <img id="dataFiscal" src="./media/Datafiscal.jpg" alt="data fiscal" >
         </div>
     </div>
-  </footer>
-        <!-- FOOTER -->
+  </footer> -->
+        <!-- FOOTER NACHO -->
+
+        <!-- FOOTER CARO -->
+        <footer class="containerF text-bg-dark">
+
+                <div class="rowF justify-content-center">
+                        <div class="col-9 align-self-center" id="contact-zone">
+                                <h1 class=" d-flex justify-content-center mt-4" id="contact-title">CONTACTO</h1>
+                                <p class=" d-flex justify-content-center text-center contact-text">En Royal Oak nos
+                                        preocupamos por ofrecerte una excelente propuesta.</p>
+                                <p class="d-flex justify-content-center text-center contact-text">Productos elaborados
+                                        con materias primas de la mas alta calidad. Contamos con la mas moderna
+                                        tecnologia para la elaboracion de nuestros productos. Exquisitos sabores que
+                                        haran de tus cenas y almuerzos momentos unicos.</p>
+                        </div>
+                </div>
+                <div class="rowF mt-2">
+                        <div
+                                class="col-sm-12 col-md-6 col-lg-3 d-flex flex-column align-items-center justify-content-center">
+                                <i class="bi bi-map large-icons" style="font-size: 4rem;"></i>
+                                <h5 class="contact-subtitles">DIRECCION</h5>
+                                <a
+                                        href="https://www.google.com/maps/place/Royal+Oak+Farmers+Market/@42.489493,-83.141097,15z/data=!4m5!3m4!1s0x0:0x56e7427bdbdafa3f!8m2!3d42.489493!4d-83.1410968?hl=es-419">
+                                        <p class="info">Calle Siempre Viva 123</p>
+                                </a>
+                        </div>
+                        <div
+                                class="col-sm-12 col-md-6 col-lg-3 d-flex flex-column align-items-center justify-content-center">
+                                <i class="bi bi-phone large-icons" style="font-size: 4rem;"></i>
+                                <h5 class="contact-subtitles">WHATSAPP</h5>
+                                <p class="info">+54 11 123-4567</p>
+
+                        </div>
+                        <div
+                                class="col-sm-12 col-md-6 col-lg-3 d-flex flex-column align-items-center justify-content-center">
+                                <i class="bi bi-envelope-open-heart large-icons" style="font-size: 4rem;"></i>
+                                <h5 class="contact-subtitles">EMAIL</h5>
+                                <p class="info">royaloak@thebest.com</p>
+                        </div>
+                        <div
+                                class="col-sm-12 col-md-6 col-lg-3 d-flex flex-column align-items-center justify-content-center">
+                                <i class="bi bi-headset large-icons" style="font-size: 4rem;"></i>
+                                <h5 class="contact-subtitles">LINEAS ROTATIVAS</h5>
+                                <p class="info">+54 11 987-6543</p>
+                        </div>
+                </div>
+                <div class="rowF d-flex flex-wrap justify-content-between baby-icons-row mt-2">
+                        <div class="col d-flex justify-content-center align-items-center baby-icons">
+                                <a href="#"><i class="bi bi-twitter" style="font-size: 1.25rem;"></i></a>
+                        </div>
+                        <div class="col d-flex justify-content-center align-items-center baby-icons2">
+                                <a href="#"><i class="bi bi-linkedin" style="font-size: 1.25rem;"></i></a>
+                        </div>
+                        <div class="col d-flex justify-content-center align-items-center baby-icons">
+                                <a href="#"><i class="bi bi-facebook" style="font-size: 1.25rem;"></i></a>
+                        </div>
+                        <div class="col d-flex justify-content-center align-items-center baby-icons2">
+                                <a href="#"><i class="bi bi-instagram" style="font-size: 1.25rem;"></i></a>
+                        </div>
+                        <div class="col d-flex justify-content-center align-items-center baby-icons">
+                                <a href="#"><i class="bi bi-link" style="font-size: 1.25rem;"></i></a>
+                        </div>
+                </div>
+
+        </footer>
+        <!-- FIN FOOTER CARO -->
 
         <!-- Script de Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
