--- a/src/main/resources/static/web/pages/carrito.html
+++ b/src/main/resources/static/web/pages/carrito.html
@@ -4,13 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
-=======
     <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E"> 
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Potta+One&display=swap" rel="stylesheet">
@@ -21,49 +14,11 @@
     <script src="https://kit.fontawesome.com/19135af981.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/carrito.css">
     <title>Royal Oak |Carrito de Compras</title>
->>>>>>> main
 </head>
 <body>
     <div id="app">
-<<<<<<< HEAD
-        <!-- ======= Header ======= -->
-<<<<<<< HEAD
-        <header></header>
-        <!-- ======= navBar ======= -->
-        <nav></nav>
-        <!-- ======= Main ======= -->
-        <main></main>
-=======
-        <header>
-          <div class="nav">
-            <div id="marca">
-                <a href="../index.html"><img src="../media/logo-royaloak.png" alt="Logo" ></a>
-            </div>
-            <div>
-                <a href="../index.html"><img class="scale-up-center" id="iconos" src="../media/iconoBurger.png" alt="menu"></a>
-                <p>Menu</p>
-            </div>
-            <div>
-                <a href="#"><img class="scale-up-center" src="../media/iconoBolsita.webp" alt=""></a>
-                <p>Pedido</p>
-            </div>
-            <div>
-                <a href=""><img class="scale-up-center" src="../media/flechasDeLasuerte.png" alt=""></a>
-                <p>Random</p>
-            </div>
-            <div >
-                <a href="../login.html"><img class="scale-up-center " src="../media/Register.webp" alt=""></a>
-                <p>register</p>
-            </div>
-            <div>
-                <a href=""><img class="scale-up-center" src="../media/cerrarSesion.png" alt=""></a>
-                <p>Salir</p>
-            </div>
-        </div>
-=======
->>>>>>> main
 
-          <div id="hamburguesa">
+        <div id="hamburguesa">
 
             <div class="collapse" id="navbarToggleExternalContent">
                     <div>
@@ -188,7 +143,7 @@
 
                 <div class="product" data-aos="fade-up" v-for="pedido in pedidos">
                     <div class="product-image" data-aos="zoom-in">
-                    <img src="../assets/logo-royaloak-2.png">
+                    <img :src="pedido.imagen">
                     </div>
                     <div class="product-details">
                     <div class="product-title"><p class="labels">{{pedido.producto}}</p></div>
@@ -253,7 +208,6 @@
                 </div>
                 </div>
         </main>
->>>>>>> main
         <!-- ======= Footer ======= -->
     </div>
 
@@ -264,14 +218,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
     crossorigin="anonymous"></script>
-<<<<<<< HEAD
-
-    <!-- Script de Axios - Vue.js - Javascript - SweetAlert -->
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="https://unpkg.com/vue@3"></script>
-    <!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="sweetalert2.min.js"></script> -->
-=======
     
     <!-- Script de Axios - Vue.js - Javascript - SweetAlert - AOS -->
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
@@ -284,6 +230,5 @@
             duration: 1000,
         })
     </script>
->>>>>>> main
 </body>
 </html>
