--- a/src/main/resources/static/web/pages/random.html
+++ b/src/main/resources/static/web/pages/random.html
@@ -18,37 +18,99 @@
 <body>
 
     <div id="app">
-        <header>
-            <div class="nav">
-                <div id="marca">
-                    <a href="#"><img src="../media/logo-royaloak.png" alt="Logo" ></a>
-                </div>
-                <div>
-                    <a href=""><img class="scale-up-center" id="iconos" src="../media/iconoBurger.png" alt="menu"></a>
-                    <p>Menu</p>
-                </div>
-                <div>
-                    <a href=""><img class="scale-up-center" src="../media/iconoBolsita.webp" alt=""></a>
-                    <p>Pedido</p>
-                </div>
-                <div>
-                    <a href=""><img class="scale-up-center" src="../media/flechasDeLasuerte.png" alt=""></a>
-                    <p>Random</p>
-                </div>
-                <div >
-                    <a href="login.html"><img class="scale-up-center " src="../media/Register.webp" alt=""></a>
-                    <p>register</p>
-                </div>
-                <div>
-                    <a href=""><img class="scale-up-center" src="../media/cerrarSesion.png" alt=""></a>
-                    <p>Salir</p>
+        <div id="hamburguesa">
+
+            <div class="collapse" id="navbarToggleExternalContent">
+
+                    <div>
+                            <nav id="menu_hamburguesa" class="navbar navbar-dark">
+                                    <div id="container_fluid" class="d-flex justify-between">
+                                            <div>
+                                                    <img id="carritoHamburguesa" src="../media/canastaIcono.png" alt="">
+                                            </div>
+                                            <div>
+                                                    <img src="../media/logo-royaloak-2.png" alt="">
+                                            </div>
+                                            <div id="botonHamburguesa">
+                                                    <button id="boton_hamburguesa" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                                                            <i class="bi bi-x-square"></i>
+                                                    </button>
+                                            </div>
+                                    </div>
+                            </nav>   
+                    </div>
+
+                <div id="hamburguesitas">
+                    <div>
+                        <a  href=""><img src="../media/iconoBurger.png"></a>
+                        <p>Menu</p>   
+                    </div>
+                    <div>
+                        <a  href=""><img src="https://cdn-icons-png.flaticon.com/512/30/30569.png"></a>
+                        <p>Royal Oak</p>
+                    </div>
+                    <div>
+                        <a  href="./login.html"><img src="../media/Register.webp"></a>
+                        <p>Registrarme</p>
+                    </div>
+                    <div>
+                        <a @click="salir"><img src="../media/cerrarSesion.png"></a>
+                        <p>Salir</p>
+                    </div>
                 </div>
             </div>
-        </header>
+            <nav id="menu_hamburguesa" class="navbar navbar-dark">
+                <div id="container_fluid" class="d-flex justify-between">
+                <div>
+                    <img id="carritoHamburguesa" src="../media/canastaIcono.png" alt="">
+                </div>
+                <div>
+                    <img src="../media/logo-royaloak-2.png" alt="">
+                </div>
+                <div id="botonHamburguesa">
+                    <button id="boton_hamburguesa" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                </div>
+            </nav>
+    </div>
+
+            <header>
+                    <div class="nav">
+                            <div id="marca">
+                                    <a href="#"><img src="../media/logo-royaloak.png" alt="Logo"></a>
+                            </div>
+                            <div id="menu">
+                                    <a href=#divisorBurgers><img class="scale-up-center" id="iconos"
+                                                    src="../media/iconoBurger.png" alt="menu"></a>
+                                    <p>Menu</p>
+                            </div>
+                            <div>
+                                    <a href="./pages/carrito.html"><img class="scale-up-center" src="../media/iconoBolsita.webp"
+                                                    alt=""></a>
+                                    <p>Pedido</p>
+                            </div>
+                            <div>
+                                    <a href=""><img class="scale-up-center" src="https://cdn-icons-png.flaticon.com/512/30/30569.png"
+                                                    alt=""></a>
+                                    <p>Royal</p>
+                            </div>
+                            <div>
+                                    <a href="./login.html"><img class="scale-up-center " src="../media/Register.webp"
+                                                    alt=""></a>
+                                    <p>Registro</p>
+                            </div>
+                            <div id="salir">
+                                    <a @click="salir"><img class="scale-up-center" src="../media/cerrarSesion.png" alt=""></a>
+                                    <p>Salir</p>
+                            </div>
+                    </div>
+          </header>
 
         <div id="random" class="d-flex row justify-content-center align-items-center p-3">
-            <img src="../assets/logo-3.png" alt="logo" class="col-12">
-            <h2 class="text-light text-center">Random</h2>
+            <img src="../media/logo-simplificado.png" alt="logo" class="col-12">
+            <h2 class="text-light text-center" style="font-family: 'Potta One'">Random</h2>
             <p class="text-light texto">Presiona el botón y deja la elección al azar.</p>
             <div class="d-flex justify-content-center gap-3">
                 <div class="card col-2 d-flex justify-content-center p-2" id="comestible" >
@@ -74,42 +136,32 @@
             <button class="btn btn-verificar col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" @click="random"><a href="#seccionAleatoria" class="text-light fw-bold">Verificar</a></button>
         </div>
         <!---->
-        <div id="seccion-aleatoria"  v-show="seccionAleatoria" class="bg-light p-3 seccionAleatoria"> 
-            <h2 class="text-center fw-bold ">Resultado de la seleccion random</h2>
-            <!-- <div class="d-flex justify-content-around bg-light p-3 m-3"> -->
-            <!-- <div class="d-flex justify-content-around bg-light p-3 m-3" v-for="producto in productosRandom">
-                <img class="img-fluid col-2" src="./media/jgaXh2A4jVwLTXkTKBDIgFHZkgm06YF3g3Sva78a.jpeg" alt="">
-                <div class="d-flex row  col-6">
-                    <h3 class="text-dark">Bastoncitos de papa</h3>
-                    <p class="text-start">rellenos con queso mozzarella</p>
-                    <p class="text-start">Stock: 15</p>
-                    <p class="text-start">Precio unitario: $500</p>
-                </div>
-                <div class="btn-group align-self-center col-3" role="group" aria-label="First group" >
-                    <button type="button"  @click="disminuirCantidad" class="btn btn-outline-secondary stock1 "><i class="material-icons">remove</i></button>
-                    <button type="button" @click="aumentarCantidad" class="btn btn-outline-secondary stock2 "><i class="material-icons">add</i></button>
-                    <input type="text" style="width : 50px" disabled class="inputCantidad" :placeholder="cantidad"></input>
-                    <button type="button" style="width : 20px" @click="aumentarCantidad" class="btn btn-outline-secondary stock2"><i class="material-icons">clear</i></button>
-                </div>
-            </div> -->
-            <div class="d-flex justify-content-around bg-light p-3 m-3" v-for="producto in productosRandom">
+        <div id="seccion-aleatoria"  v-show="seccionAleatoria" class="p-3 seccionAleatoria"> 
+            <div id="divisorBurgers" class="d-flex justify-content-center align-items-center">
+                <h2 class="text-center fw-bold text-light">Resultado de la seleccion random</h2>
+            </div>
+            <div class="d-flex justify-content-around producto-random p-3 m-3" v-for="producto in productosRandom">
                 <img class="img-fluid col-2" src="../media/jgaXh2A4jVwLTXkTKBDIgFHZkgm06YF3g3Sva78a.jpeg" alt="">
                 <div class="d-flex row  col-6">
-                    <h3 class="text-dark">{{producto[0].nombre}}</h3>
-                    <p class="text-start">{{producto[0].descripcion}}</p>
-                    <p class="text-start">Stock: {{producto[0].stock}}</p>
-                    <p class="text-start">Precio unitario: ${{producto[0].precio}}</p>
+                    <h3 class="text-light">{{producto.nombre}}</h3>
+                    <p class="text-start">{{producto.descripcion}}</p>
+                    <p class="text-start">Stock: {{producto.stock}}</p>
+                    <p class="text-start">Precio unitario: ${{producto.precio}}</p>
+                    
                 </div>
                 <div class="btn-group align-self-center" role="group" aria-label="First group" >
-                    <button type="button" @click="disminuirCantidad" class="btn btn-outline-secondary stock1">&#45;</button>
-                    <button type="button" @click="aumentarCantidad" class="btn btn-outline-secondary stock2">&#43;</button>
-                    <input type="text" style="width : 50px" disabled class="inputCantidad" :placeholder="cantidad"></input>
+                    <button type="button" @click="disminuirCantidad(producto)" disabled class="btn btn-outline-secondary stock1">&#45;</button>
+                    <button type="button" @click="aumentarCantidad(producto)" :disabled="1 == 2" class="btn btn-outline-secondary stock2">&#43;</button>
+                    <input type="text" style="width : 50px" disabled class="inputCantidad" :placeholder="producto.cant"></input>
+                    <button type="button" @click="eliminarProducto(producto)" class="btn btn-outline-secondary stock2">x</button>
+                    <button type="button" @click="agregar(producto)" class="btn btn-outline-secondary stock2">x</button>
                 </div>
             </div>
-            <h2 class="text-center">Total a pagar ${{totalPagar}}</h2>
+            {{total}}
+            <h2 class="text-center text-light">Total a pagar ${{totalPagar}}</h2>
             <div class="d-flex justify-content-center gap-2">
                 <button class="btn btn-light col-3 btn-otravez text-light" @click="random">Revisar otra vez</button> 
-                <button class="btn btn-verificar col-3 text-light" >Ordenar</button> 
+                <button class="btn btn-verificar col-3 text-light" @click="ordenar">Ordenar</button> 
             </div>
         </div>
 
