Perfil de Usuario

--- a/src/main/resources/static/web/pages/contacto.html
+++ b/src/main/resources/static/web/pages/contacto.html
@@ -19,9 +19,7 @@
         <!-- ======= Main ======= -->
         <main></main>
         <!-- ======= Footer ======= -->
-        <footer>
-            <p>blab alb alb alb alb al</p>
-        </footer>
+        <footer></footer>
     </div>
 
     <!-- Script de Bootstrap -->
