Cambios rutas Perfil usuario

--- a/src/main/resources/static/web/pages/perfil.html
+++ b/src/main/resources/static/web/pages/perfil.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Potta+One&display=swap" rel="stylesheet">
 
   <script src="https://kit.fontawesome.com/19135af981.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="./web/css/perfil.css">
+  <link rel="stylesheet" href="/web/css/perfil.css">
   <title>Tu Perfil</title>
 </head>
 
