--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -69,49 +69,27 @@
                                                 <a href=""><img src="media/cerrarSesion.png"></a>
                                                 <p>Salir</p>
                                         </div>
-                                </div>
+                                </div> 
                         </div>
-<<<<<<< HEAD
-                        <nav id="menu_hamburguesa" class="navbar navbar-dark">
-                                <div id="container_fluid" class="d-flex justify-between">
-                                        <div>
-                                                <img id="carritoHamburguesa" src="media/canastaIcono.png" alt="">
-                                        </div>
-                                        <div>
-                                                <img src="media/logo-royaloak-2.png" alt="">
-                                        </div>
-                                        <div id="botonHamburguesa">
-                                                <button id="boton_hamburguesa" class="navbar-toggler" type="button"
-                                                        data-bs-toggle="collapse"
-                                                        data-bs-target="#navbarToggleExternalContent"
-                                                        aria-controls="navbarToggleExternalContent"
-                                                        aria-expanded="false" aria-label="Toggle navigation">
-                                                        <span class="navbar-toggler-icon"></span>
-                                                </button>
-                                        </div>
-                                </div>
-                        </nav>
-=======
 
-                    <div id="hamburguesitas">
-                        <div>
-                            <a  href=""><img src="media/iconoBurger.png"></a>
-                            <p>Menu</p>   
-                        </div>
-                        <div>
-                            <a  href=""><img src="https://cdn-icons-png.flaticon.com/512/30/30569.png"></a>
-                            <p>Royal Oak</p>
-                        </div>
-                        <div>
-                            <a  href="./login.html"><img src="media/Register.webp"></a>
-                            <p>Registrarme</p>
-                        </div>
-                        <div>
-                            <a @click="salir"><img src="media/cerrarSesion.png"></a>
-                            <p>Salir</p>
-                        </div>
-                    </div>
->>>>>>> Main
+                       <!-- <div id="hamburguesitas">
+                                <div>
+                                <a  href=""><img src="media/iconoBurger.png"></a>
+                                <p>Menu</p>   
+                                </div>
+                                <div>
+                                <a  href=""><img src="https://cdn-icons-png.flaticon.com/512/30/30569.png"></a>
+                                <p>Royal Oak</p>
+                                </div>
+                                <div>
+                                <a  href="./login.html"><img src="media/Register.webp"></a>
+                                <p>Registrarme</p>
+                                </div>
+                                <div>
+                                <a @click="salir"><img src="media/cerrarSesion.png"></a>
+                                <p>Salir</p>
+                                </div>
+                        </div>-->
                 </div>
 
                 <header>
@@ -195,25 +173,8 @@
                                 alt="12">
                 </div>
 
-<<<<<<< HEAD
-                <!-- DARK MODE -->
-                <div class="form-check form-switch d-flex ">
-                        <div>
-                                <input class="form-check-input" type="checkbox" role="switch" id="switch">
-                        </div>
-
-                        <div>
-                                <label class="form-check-label" for="flexSwitchCheckDefault">Dark Mode</label>
-                        </div>
-                </div>
-
-
-
-
-=======
                             
                 <!-- DIVISOR HAMBURGUESAS -->
->>>>>>> Main
                 <div data-aos="fade-up" class="divisor d-flex">
                         <div class="tipoDeComida">
                                 <img src="media/logo-royaloak-2.png" alt="">
@@ -228,25 +189,11 @@
                 <!-- SECCION HAMBURGUESAS -->
                 <section data-aos="fade-up" class="section-products">
                         <div class="container">
-<<<<<<< HEAD
-                                <!-- <div class="row justify-content-center text-center">
-                            <div class="col-md-8 col-lg-6">
-                                    <div class="header">
-                                            <h3>Seccion de productos</h3>
-                                            <h2>Nuestras Hamburguesas</h2>
-                                    </div>
-                            </div>
-                    </div> -->
-=======
->>>>>>> Main
                                 <div class="row">
                                         <!-- Single Product -->
                                         <div v-for="hamburguesa in hamburguesas" class="col-md-6 col-lg-4 col-xl-3">
                                                 <div class="single-product">
 
-<<<<<<< HEAD
-
-=======
                                                         <div id="product-1" class="part-1" v-bind:style='{ background: "url(" + hamburguesa.imagen + ") center", }'>
 
                                                                 <ul>
@@ -261,7 +208,6 @@
                                                                 <p>{{hamburguesa.descripcion}}</p>
                                                                 <h4 class="product-old-price">$79.99</h4>
                                                                 <h4 class="product-price">{{hamburguesa.precio}}</h4>
->>>>>>> Main
 
                                                         </div>
                                                         
@@ -471,84 +417,8 @@
 
         </div>
 
-<<<<<<< HEAD
-        <!-- FOOTER -->
-        <footer class="containter text-bg-dark">
-
-                <div class="row justify-content-center">
-                        <div class="col-9 align-self-center" id="contact-zone">
-                                <h1 class=" d-flex justify-content-center mt-4" id="contact-title">CONTACTO</h1>
-                                <p class=" d-flex justify-content-center text-center contact-text">En Royal Oak nos
-                                        preocupamos por ofrecerte una excelente propuesta.</p>
-                                <p class="d-flex justify-content-center text-center contact-text">Productos elaborados
-                                        con materias primas de la mas alta calidad. Contamos con la mas moderna
-                                        tecnologia para la elaboracion de nuestros productos. Exquisitos sabores que
-                                        haran de tus cenas y almuerzos momentos unicos.</p>
-                        </div>
-                </div>
-                <div class="row mt-2">
-                        <div
-                                class="col-sm-12 col-md-6 col-lg-3 d-flex flex-column align-items-center justify-content-center">
-                                <i class="bi bi-map large-icons" style="font-size: 4rem;"></i>
-                                <h5 class="contact-subtitles">DIRECCION</h5>
-                                <a
-                                        href="https://www.google.com/maps/place/Royal+Oak+Farmers+Market/@42.489493,-83.141097,15z/data=!4m5!3m4!1s0x0:0x56e7427bdbdafa3f!8m2!3d42.489493!4d-83.1410968?hl=es-419">
-                                        <p class="info">Calle Siempre Viva 123</p>
-                                </a>
-                        </div>
-                        <div
-                                class="col-sm-12 col-md-6 col-lg-3 d-flex flex-column align-items-center justify-content-center">
-                                <i class="bi bi-phone large-icons" style="font-size: 4rem;"></i>
-                                <h5 class="contact-subtitles">WHATSAPP</h5>
-                                <p class="info">+54 11 123-4567</p>
-
-                        </div>
-                        <div
-                                class="col-sm-12 col-md-6 col-lg-3 d-flex flex-column align-items-center justify-content-center">
-                                <i class="bi bi-envelope-open-heart large-icons" style="font-size: 4rem;"></i>
-                                <h5 class="contact-subtitles">EMAIL</h5>
-                                <p class="info">royaloak@thebest.com</p>
-                        </div>
-                        <div
-                                class="col-sm-12 col-md-6 col-lg-3 d-flex flex-column align-items-center justify-content-center">
-                                <i class="bi bi-headset large-icons" style="font-size: 4rem;"></i>
-                                <h5 class="contact-subtitles">LINEAS ROTATIVAS</h5>
-                                <p class="info">+54 11 987-6543</p>
-                        </div>
-                </div>
-                <div class="row d-flex flex-wrap justify-content-between baby-icons-row mt-2">
-                        <div class="col d-flex justify-content-center align-items-center baby-icons">
-                                <a href="#"><i class="bi bi-twitter" style="font-size: 1.25rem;"></i></a>
-                        </div>
-                        <div class="col d-flex justify-content-center align-items-center baby-icons2">
-                                <a href="#"><i class="bi bi-linkedin" style="font-size: 1.25rem;"></i></a>
-                        </div>
-                        <div class="col d-flex justify-content-center align-items-center baby-icons">
-                                <a href="#"><i class="bi bi-facebook" style="font-size: 1.25rem;"></i></a>
-                        </div>
-                        <div class="col d-flex justify-content-center align-items-center baby-icons2">
-                                <a href="#"><i class="bi bi-instagram" style="font-size: 1.25rem;"></i></a>
-                        </div>
-                        <div class="col d-flex justify-content-center align-items-center baby-icons">
-                                <a href="#"><i class="bi bi-link" style="font-size: 1.25rem;"></i></a>
-                        </div>
-                </div>
-
-        </footer>
-        <!--   <div id="contenedorInfo">
-                <button class="botoninfo" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample"
-                        aria-expanded="false" aria-controls="collapseExample">
-                        <i class="bi bi-chevron-up"></i> Más información
-                </button>
-        </div>
-        <div class="collapse" id="collapseExample">
-        <div class="card card-body card-informacion">
-        <div id="masInformacion-contenedor"
-                class="container-fluid-p0 d-flex justify-content-around pt-4 pb-4 text-dark flex-wrap row">
-=======
         <!-- FOOTER CARO -->
         <footer class="containerF text-bg-dark">
->>>>>>> Main
 
                 <div class="rowF justify-content-center">
                         <div class="col-9 align-self-center" id="contact-zone">
@@ -609,75 +479,9 @@
                         </div>
                 </div>
 
-<<<<<<< HEAD
-                <div class="col-lg-2 extrainfo">
-                <h3>Somos Royal Oak</h3>
-                <ul>
-                <li><a href="./login.html">Registrarme</a></li>
-                <li><a href="#" >Ver Menu</a></li>
-                </ul>
-                </div>
-
-                <div class="col-lg-2 extrainfo">
-                <h3>Servicio al cliente</h3>
-                <ul>
-                <li><a class="swal-preguntas-frecuentes" onclick="preguntasFrecuentes()">Preguntas Frecuentes</a></li>
-                <li><a class="swal-atencion-al-cliente" onclick="atencionAlCliente()">Atencion al cliente</a></li>
-                <li><a class="swal-terminos-y-condiciones" onclick="terminosYCondiciones()">Terminos y condiciones</a></li>
-                <li><a class="swal-medios-de-pago" onclick="mediosDePago()">Medios de Pago</a></li>
-                </ul>
-                </div>
-
-                <div class="col-lg-2 extrainfo">
-                <h3>Sobre Nosotros</h3>
-                <ul>
-                <li><a class="swal-quienes-somos" onclick="quienesSomos()">Quiénes Somos</a></li>
-                <li><a class="swal-quienes-somos"  onclick="contacto()">Contacto</a></li>
-                </ul>
-                </div>
-
-                <div class="col-lg-2 infocontacto d-flex flex-column ">
-                <h6>Contáctanos</h6>
-                <span class="d-flex gap-3 pb-2"><a href="#" target="_blank"><i
-                        class="bi bi-facebook" style="font-size:25px"></i></a>
-                <a href="#" target="_blank"><i class="bi bi-instagram"
-                        style="font-size:25px"></i></a>
-                <a href="#" target="_blank"><i class="bi bi-twitter"
-                        style="font-size:25px"></i></a></span>
-
-
-                <a href="">RoyalOak@gmail.com</a>
-                <a href="tel:+5491124966463">+1 408 548 4536</a>
-                <p>316 Eleven Street, Chicago, Estados Unidos</p>
-                </div>
-
-        </div>
-        </div>
-        </div>
-
-  <footer class="d-flex align-items-center justify-content-around p-2 flex-wrap">
-    <div>
-        <p class="ps-5">&copy;Royal Oak 2022 - Todos los derechos reservados</p>
-    </div>
-    <div id="metodos" class="d-flex ">
-        <div>
-                <img id="mp" src="./media/mercadopago1.png" alt="mercado pago" >
-        </div>
-        <div>
-                <img id="uala" src="./media/uala2.png" alt="mercado pago" >
-        </div>
-        <div>
-                <img id="dataFiscal" src="./media/Datafiscal.jpg" alt="data fiscal" >
-        </div>
-    </div>
-  </footer>
--->
-        <!-- FOOTER -->
-=======
         </footer>
         <!-- FIN FOOTER CARO -->
 
->>>>>>> Main
         <!-- Script de Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
                 integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
