vista admin mejorada

--- a/src/main/resources/static/web/index.html
+++ b/src/main/resources/static/web/index.html
@@ -108,7 +108,7 @@
                                         <p>Pedido</p>
                                 </div>
                                 <div>
-                                        <a href=""><img class="scale-up-center"
+                                        <a href="./pages/random.html"><img class="scale-up-center"
                                                         src="https://cdn-icons-png.flaticon.com/512/30/30569.png"
                                                         alt=""></a>
                                         <p>Royal</p>
