retoque de detalles en index y carrito

--- a/src/main/resources/static/web/pages/carrito.html
+++ b/src/main/resources/static/web/pages/carrito.html
@@ -100,15 +100,10 @@
                                         alt=""></a>
                         <p>Royal</p>
                 </div>
-                <div v-if="cliente.length == 0">
+                <div>
                         <a href="../login.html"><img class="scale-up-center " src="../media/Register.webp"
                                         alt=""></a>
                         <p>Registro</p>
-                </div>
-                <div v-else>
-                    <a href="../login.html"><img class="scale-up-center " src="../media/Register.webp"
-                                    alt=""></a>
-                    <p>Perfil</p>
                 </div>
                 <div id="salir">
                         <a href=""><img class="scale-up-center" src="../media/cerrarSesion.png" alt=""></a>
