cambio autorizacion, arreglo css

--- a/src/main/resources/static/web/pages/perfil.html
+++ b/src/main/resources/static/web/pages/perfil.html
@@ -24,102 +24,95 @@
 
       <div class="collapse" id="navbarToggleExternalContent">
 
-        <div>
-          <nav id="menu_hamburguesa" class="navbar navbar-dark">
-            <div id="container_fluid" class="d-flex justify-between">
-              <div>
-                <img id="carritoHamburguesa" src="media/canastaIcono.png" alt="">
-              </div>
-              <div>
-                <img src="/web/media/logo-royaloak-2.png" alt="">
-              </div>
-              <div id="botonHamburguesa">
-                <button id="boton_hamburguesa" class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-                  aria-expanded="false" aria-label="Toggle navigation">
-                  <i class="bi bi-x-square"></i>
-                </button>
-              </div>
-            </div>
-          </nav>
-        </div>
+          <div>
+              <nav id="menu_hamburguesa" class="navbar navbar-dark">
+                  <div id="container_fluid" class="d-flex justify-between">
+                      <div>
+                          <img id="carritoHamburguesa" src="../media/canastaIcono.png" alt="">
+                      </div>
+                      <div>
+                          <img src="https://res.cloudinary.com/royal-oak-imagenes/image/upload/v1656443334/logo-simplificado_xcuvzo.png" alt="">
+                      </div>
+                      <div id="botonHamburguesa">
+                          <button id="boton_hamburguesa" class="navbar-toggler" type="button"
+                              data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent"
+                              aria-controls="navbarToggleExternalContent" aria-expanded="false"
+                              aria-label="Toggle navigation">
+                              <i class="bi bi-x-square"></i>
+                          </button>
+                      </div>
+                  </div>
+              </nav>
+          </div>
 
-        <div id="hamburguesitas">
-          <div>
-            <a href=""><img src="media/iconoBurger.png"></a>
-            <p>Menu</p>
+          <div id="hamburguesitas">
+              <div>
+                  <a href=""><img src="../media/iconoBurger.png"></a>
+                  <p>Menu</p>
+              </div>
+              <div>
+                  <a href=""><img src="https://cdn-icons-png.flaticon.com/512/30/30569.png"></a>
+                  <p>Royal Oak</p>
+              </div>
+              <div>
+                  <a href="./login.html"><img src="../media/Register.webp"></a>
+                  <p>Registrarme</p>
+              </div>
+              <div>
+                  <a @click="salir"><img src="../media/cerrarSesion.png"></a>
+                  <p>Salir</p>
+              </div>
           </div>
-          <div>
-            <a href=""><img src="https://cdn-icons-png.flaticon.com/512/30/30569.png"></a>
-            <p>Royal Oak</p>
-          </div>
-          <div>
-            <a href=""><img src="media/Register.webp"></a>
-            <p>Registrarme</p>
-          </div>
-          <div>
-            <a href=""><img src="media/cerrarSesion.png"></a>
-            <p>Salir</p>
-          </div>
-        </div>
       </div>
       <nav id="menu_hamburguesa" class="navbar navbar-dark">
-        <div id="container_fluid" class="d-flex justify-between">
-          <div>
-            <img id="carritoHamburguesa" src="media/canastaIcono.png" alt="">
+          <div id="container_fluid" class="d-flex justify-between">
+              <div>
+                  <img id="carritoHamburguesa" src="../media/canastaIcono.png" alt="">
+              </div>
+              <div>
+                  <img src="https://res.cloudinary.com/royal-oak-imagenes/image/upload/v1656443334/logo-simplificado_xcuvzo.png" alt="">
+              </div>
+              <div id="botonHamburguesa">
+                  <button id="boton_hamburguesa" class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                      data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
+                      aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                  </button>
+              </div>
           </div>
-          <div>
-            <img src="media/logo-royaloak-2.png" alt="">
-          </div>
-          <div id="botonHamburguesa">
-            <button id="boton_hamburguesa" class="navbar-toggler" type="button" data-bs-toggle="collapse"
-              data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-              aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </div>
-        </div>
       </nav>
-    </div>
+  </div>
 
-    <!-- ======= Header ======= -->
-    <header>
+  <header>
       <div class="nav">
-        <div id="marca">
-          <a href="#"><img src="/web/media/logo-royaloak.png" alt="Logo"></a>
-        </div>
-        <div id="menu">
-          <a href="../index.html"><img class="scale-up-center" id="iconos" src="/web/media/iconoBurger.png"
-              alt="menu"></a>
-          <p>Menu</p>
-        </div>
-        <div>
-          <a href="#"><img class="scale-up-center" src="/web/media/iconoBolsita.webp" alt=""></a>
-          <p>Pedido</p>
-        </div>
-        <div>
-          <a href="#"><img class="scale-up-center" src="https://cdn-icons-png.flaticon.com/512/30/30569.png" alt=""></a>
-          <p>Royal</p>
-        </div>
-        <div>
-          <a href="../login.html"><img class="scale-up-center " src="/web/media/Register.webp" alt=""></a>
-          <p>Registro</p>
-        </div>
-        <div id="salir">
-          <a href=""><img class="scale-up-center" src="/web/media/cerrarSesion.png" alt=""></a>
-          <p>Salir</p>
-        </div>
+          <div id="marca">
+              <a href="#"><img src="https://res.cloudinary.com/royal-oak-imagenes/image/upload/v1656443331/logo-ro_xmp8hl.png" alt="Logo"></a>
+          </div>
+          <div id="menu">
+              <a href=#divisorBurgers><img class="scale-up-center" id="iconos" src="../media/iconoBurger.png"
+                      alt="menu"></a>
+              <p>Menu</p>
+          </div>
+          <div>
+              <a href="./pages/carrito.html"><img class="scale-up-center" src="../media/iconoBolsita.webp"
+                      alt=""></a>
+              <p>Pedido</p>
+          </div>
+          <div>
+              <a href=""><img class="scale-up-center" src="https://cdn-icons-png.flaticon.com/512/30/30569.png"
+                      alt=""></a>
+              <p>Royal</p>
+          </div>
+          <div>
+              <a href="./login.html"><img class="scale-up-center " src="../media/Register.webp" alt=""></a>
+              <p>Registro</p>
+          </div>
+          <div id="salir">
+              <a @click="salir"><img class="scale-up-center" src="../media/cerrarSesion.png" alt=""></a>
+              <p>Salir</p>
+          </div>
       </div>
-      <div data-aos="fade-up" class="divisor d-flex">
-        <div class="tipoDeComida">
-          <img src="/web/media/logo-royaloak-2.png" alt="Burger Rain">
-          <h3>Hamburguesas</h3>
-        </div>
-        <div id="divisorBurgers">
-
-        </div>
-      </div>
-    </header>
+  </header>
 
     <!-- ======= Main ======= -->
     <main>
